Rewrite cases and mcases metas